tests/type-errors/for_ident_simple_map.arl
archetype for_ident_simple_map

entry exec () {
  effect {
    var m : map<int, string> = [];
    for i in m do
      ()
    done
  }
}
